# Trusted-IQ

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  metrics.yml
docs/: architecture.md  model-evaluation.md  model-landscape.md  orchestration.md  testing.md  tools.md
docs/adr/: 0001-use-uv-as-package-manager.md  0003-agentic-vs-thin-orchestrator.md
docs/diagrams/: diagrama-sequencia-fase1.xml
src/app/: claude_code_llm.py  config.py  eval.py  llm_factory.py  (+6 more)
trade-iq-project/trade-iq-project/trade-iq-pod/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
trade-iq-project/trade-iq-project/trade-iq-pod/.githooks/: commit-msg
trade-iq-project/trade-iq-project/trade-iq-pod/docs/adr/: 0002-langchain-provider-agnostic-factory.md  template.md
trade-iq-project/trade-iq-project/trade-iq-pod/scripts/: benchmark_models.py  evaluate_models.py
trade-iq-project/trade-iq-project/trade-iq-pod/src/app/: config.py  llm_factory.py  logging.py  main.py
trade-iq-project/trade-iq-project/trade-iq-pod/src/app/agents/: orchestrator.py  subagent_a.py  subagent_b.py
trade-iq-project/trade-iq-project/trade-iq-pod/src/app/api/: routes.py
trade-iq-project/trade-iq-project/trade-iq-pod/src/app/schemas/: models.py
trade-iq-project/trade-iq-project/trade-iq-pod/src/app/tools/: sample_tool.py
trade-iq-project/trade-iq-project/trade-iq-pod/tests/: conftest.py
trade-iq-project/trade-iq-project/trade-iq-pod/tests/data/: intent_dataset.json
trade-iq-project/trade-iq-project/trade-iq-pod/tests/unit/: test_eval.py  test_orchestrator.py  test_sample_tool.py  test_tpo_tools.py
(+41 files in other folders)
